--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
       font-weight: 600;
       font-family: 'Comfortaa', cursive;
     }
+    .btn-upload{
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      padding: 20px 23px;
+      border-radius: 50%;
+      color: #fff;
+      background: rgb(201, 9, 9);
+      z-index: 4;
+    }
     .maintain-container{
         display: none;
         background: #fff;
@@ -234,6 +244,16 @@ footer{
   font-size: 15px;
 }
 @media screen and (max-width: 768px) {
+    .btn-upload{
+      position: fixed;
+      bottom: 60px;
+      right: 20px;
+      padding: 20px 23px;
+      border-radius: 50%;
+      color: #fff;
+      background: rgb(201, 9, 9);
+      z-index: 4;
+    }
     .section-title{
       padding: 0 20px;
       color: rgb(43, 43, 43);
@@ -337,7 +357,11 @@ footer{
         Disclaimer: This web page is meant for educational purpose only. All copyrights to their official owner. Page was created by Om Lokhande.
     </marquee>
     </div>
-
+<div class="btn-upload">
+  <a class="" href="pages/materials.html">
+  <i class="fa fa-upload" style="color: #fff;"></i>
+</a>
+</div>
 <center>
     <div class="modern-navigation">
     <div class="modern-dash"></div><br>
