--- a/pages/materials.html
+++ b/pages/materials.html
@@ -140,6 +140,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> BME Exp. 7 - 3D Printing (Solved)
   <br></td>
   <td class="division">B</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">Uploaded on 23rd Feb 2021 at 7:36 PM</td>
   </tr>
@@ -147,6 +148,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -154,6 +156,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -161,6 +164,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -168,6 +172,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -175,6 +180,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -182,6 +188,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -189,6 +196,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -196,6 +204,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -203,6 +212,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -210,6 +220,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -217,6 +228,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
@@ -224,6 +236,7 @@
   <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
   <br></td>
   <td class="division">(division)</td>
+  <td class="provider">Provided by Om Lokhande</td>
 
   <td class="date-time">(date of upload)</td>
   </tr>
