--- a/pages/upload.html
+++ b/pages/upload.html
@@ -178,6 +178,13 @@
     <h6 class="note">Materials containing invalid data will be not accepted. </h6>
     <div class="material-container">
         <form action="https://formsubmit.co/om.lokhande34@gmail.com" method="POST">
+            <h5> Full Name: </h5>
+        <input type="text" name="Name: "><br><br>
+        <h5> Email Address: </h5>
+        <input type="text" name="Email: "><br><br>
+
+
+        </form>
  <table class="table table-borderless">
   <tbody id="Table">
   <tr class="">
