--- a/pages/materials.html
+++ b/pages/materials.html
@@ -77,17 +77,18 @@
         }
 @media screen and (max-width: 768px) {
     .heading{
-        text-align: center;
-        margin-top: 80px;
+        font-size: 20px;
+        margin-left: 15px;
+        margin-top: 25px;
     }
         .material-container{
             margin: 0px 0px;
             background: #fff;
-            border: 0px #b8000000 solid;
+            border: 0px #ff0080 solid;
             border-radius: 0px;
-            height: 66vh;
+            height: 80vh;
             overflow: scroll;
-            box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.192);
+            box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.836);
         }
         tr{
             color: rgb(29, 29, 29);
@@ -107,14 +108,16 @@
         }
         .btn-upload{
             position: absolute;
-            top: 0px;
-            right: 0px;
+            top: 20px;
+            right: 20px;
             text-align: center;
             color: #fff;
             background: #ff0062bd;
-            width: 100%;
-            padding: 10px 20px;
+            width: fit-content;
+            padding: 10px 15px;
             border-radius: 0px;
+            font-size: 12px;
+            font-weight: 600;
             cursor: pointer;
             box-shadow: 3px 3px 20px rgba(0, 0, 0, 0);
             transition: 0.5s ease;
