--- a/pages/upload.html
+++ b/pages/upload.html
@@ -99,16 +99,16 @@
     .heading{
         font-size: 21px;
         font-weight: 600;
-        text-align: center;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-top: 80px;
+        margin-left: 10px;
+        margin-top: 30px;
     }
     .note{
         color: rgb(255, 255, 255);
         background: rgba(0, 0, 0, 0.699);
         text-align: center;
         border-radius: 4px;
-        margin: 10px 15px;
+        margin: 10px 20px;
         margin-top: -20px;
         padding: 8px 10px;
         font-size: 10px;
@@ -142,10 +142,10 @@
             outline: none;
         }
         input[type=submit]{
-            padding: 10px 20px;
+            padding: 5px 15px;
             color: #ffffff;
             border: 2px #ff0062 solid;
-            border-radius: 0px;
+            border-radius: 4px;
             font-weight: 600;
             outline: none;
         }
@@ -153,14 +153,14 @@
         h6{font-size: 11px;}
         .btn-upload{
             position: absolute;
-            top: 0px;
-            right: 0px;
+            top: 20px;
+            right: 20px;
             text-align: center;
             color: #fff;
             background: #ff0062bd;
-            width: 100%;
-            padding: 10px 20px;
-            border-radius: 0px;
+            width: fit-content;
+            padding: 5px 15px;
+            border-radius: 10px;
             cursor: pointer;
             box-shadow: 3px 3px 20px rgba(0, 0, 0, 0);
             transition: 0.5s ease;
