--- a/pages/materials.html
+++ b/pages/materials.html
@@ -27,6 +27,9 @@
         body{
             background: #fff;
         }
+        a{color: #fff; text-decoration: none;}
+        a:hover{color: #fff; text-decoration: none;}
+        a{color: #fff; text-decoration: none;}
         .timeago{
             color: #ff002b;
         }
@@ -50,13 +53,18 @@
         }
         tr:hover{
             color: #fff;
-            background: #be0020;
+            background: #ff0062;
             transform: scale(1.0);
             transition: 0.3s ease;
         }
         tr:active{
             transform: scale(0.97);
             transition: 0.1s ease;
+        }
+        .cover-class{
+            width: 5%;
+            border-radius: 50%;
+            margin-right: 10px;
         }
         .btn-upload{
             position: absolute;
@@ -94,13 +102,13 @@
             color: rgb(29, 29, 29);
             background: #ffffff00;
             overflow: scroll;
-            transition: 0.3s ease;
+            transition: 0.1s ease;
         }
         tr:hover{
             color: #fff;
             background: #be0020;
             transform: scale(1.0);
-            transition: 0.3s ease;
+            transition: 0.1s ease;
         }
         tr:active{
             transform: scale(0.97);
@@ -132,119 +140,27 @@
 </head>
 <body>
 <div class="btn-upload">
+   <a href="https://forms.gle/34EL7Z9uGRH8zcPe6" draggable="false">
     Upload Material
+</a>
 </div>
     <h2 class="heading">Material Store</h2>
 
     <div class="material-container">
  <table class="table table-borderless">
   <tbody id="Table">
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> BME Exp. 7 - 3D Printing (Solved)
+  <tr class="" onclick="bmeExp7()">
+  <td class="main-title"><img src="../img/avatar.jpg" class="cover-class"> BME Exp. 7 - 3D Printing (Solved)
   <br></td>
   <td class="division">B</td>
-  <td class="provider">Provided by Om Lokhande</td>
+  <td class="provider">Provided by Keshav More</td>
 
   <td class="date-time">Uploaded on 23rd Feb 2021 at 7:36 PM</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
-  </tr>
-  <tr class="" onclick="ptd()">
-  <td class="main-title"><img src="../img/class-a.jpg" class="cover-class"> (Title of the material)
-  <br></td>
-  <td class="division">(division)</td>
-  <td class="provider">Provided by Om Lokhande</td>
-
-  <td class="date-time">(date of upload)</td>
   </tr>
 </tbody>
 </table>
 </div>
+<script>
+</script>
 </body>
 </html>
