--- a/pages/materials.html
+++ b/pages/materials.html
@@ -4,6 +4,7 @@
     <link href="https://rubyproducti9n.github.io/concertera/mdb/css/global.min.css" rel="stylesheet">
     <link href="https://rubyproducti9n.github.io/concertera/css/room.css" rel="stylesheet">
 
+    <script src="https://rubyproducti9n.github.io/concertera/mdb/js/global.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="JS/time ago.js" type="text/javascript"></script>
     <script src="timeago/jquery.timeago.js" type="text/javascript"></script>
@@ -40,7 +41,7 @@
             margin: 40px 20px;
             background: #fff;
             border: 2px #b8000000 solid;
-            border-radius: 10px;
+            border-radius: 20px;
             height: 75vh;
             overflow: scroll;
             box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.192);
@@ -52,8 +53,8 @@
             transition: 0.3s ease;
         }
         tr:hover{
-            color: #fff;
-            background: #ff0062;
+            color: rgb(255, 255, 255);
+            background: #db131c;
             transform: scale(1.0);
             transition: 0.3s ease;
         }
